--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -47,6 +47,9 @@
       <height>171</height>
      </rect>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
@@ -110,7 +113,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>16</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
