--- a/res.qrc
+++ b/res.qrc
@@ -2,5 +2,17 @@
     <qresource prefix="/">
         <file>logo.png</file>
         <file>img/FishBegin.jpg</file>
+        <file>img/close.png</file>
+        <file>img/config.png</file>
+        <file>img/FishBegin(2).jpg</file>
+        <file>img/hamburger-button.png</file>
+        <file>img/hamburger-button(2).png</file>
+        <file>img/logo.jpg</file>
+        <file>img/logo.png</file>
+        <file>img/more.png</file>
+        <file>img/off-screen.png</file>
+        <file>img/start_interface.jpg</file>
+        <file>img/startbutton.png</file>
     </qresource>
+    <qresource prefix="/img"/>
 </RCC>
