--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -12,37 +12,18 @@
   </property>
   <property name="font">
    <font>
-    <pointsize>8</pointsize>
+    <pointsize>9</pointsize>
    </font>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>430</x>
-      <y>70</y>
-      <width>80</width>
-      <height>18</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton:hover{
-    background:blue;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>立即使用</string>
-    </property>
-   </widget>
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>70</y>
+      <x>540</x>
+      <y>200</y>
       <width>261</width>
       <height>171</height>
      </rect>
@@ -51,8 +32,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>110</y>
+      <x>410</x>
+      <y>140</y>
       <width>80</width>
       <height>18</height>
      </rect>
@@ -70,8 +51,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>150</y>
+      <x>410</x>
+      <y>180</y>
       <width>80</width>
       <height>18</height>
      </rect>
@@ -88,8 +69,8 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>430</x>
-      <y>190</y>
+      <x>410</x>
+      <y>220</y>
       <width>80</width>
       <height>18</height>
      </rect>
@@ -103,6 +84,37 @@
      <string>删除标签</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>300</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>36</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>hello!</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>260</y>
+      <width>80</width>
+      <height>18</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>找文件</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -110,7 +122,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>16</height>
+     <height>17</height>
     </rect>
    </property>
   </widget>
