--- a/res.qrc
+++ b/res.qrc
@@ -14,6 +14,10 @@
         <file>img/start_interface.jpg</file>
         <file>img/startbutton.png</file>
         <file>img/fun_interface.jpg</file>
+        <file>img/addtag.jpg</file>
+        <file>img/deltag.jpg</file>
+        <file>img/findfile.jpg</file>
+        <file>img/viewtag.jpg</file>
     </qresource>
     <qresource prefix="/img"/>
 </RCC>
